--- a/.github/workflows/test-as-in-docs-modified.yml
+++ b/.github/workflows/test-as-in-docs-modified.yml
@@ -16,7 +16,7 @@ jobs:
       Greeting: Hello
     steps:
       - name: "Say Hello Mona it's Monday"
-        if: ${{ env.DAY_OF_WEEK == 'Monday' }}
+        if: env.DAY_OF_WEEK == 'Monday'
         run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
         env:
           First_Name: Mona
