--- a/.github/workflows/test-as-in-docs-modified.yml
+++ b/.github/workflows/test-as-in-docs-modified.yml
@@ -17,7 +17,5 @@ jobs:
     steps:
       - name: "Say Hello Mona it's Monday"
         if: env.DAY_OF_WEEK == 'Monday'
-        run: echo "$Greeting $First_Name. Today is whatever"
-        env:
-          First_Name: Mona
+        run: echo "$Greeting no-name. Today is whatever"
 
